--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+.App h1{
+  text-align: center;
+  color: #fff;
+  font-size: 64px;
+  font-weight: bold;
+  font-family: 'Voces', sans-serif;
+
+
+}
+
 .App-header{
   margin: 30px 0;
 }
@@ -12,4 +22,9 @@
 .App-footer{
   text-align: center;
   margin: 30px 0;
+}
+
+a{
+  color: #fdf6f6;
+  
 }
