--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,18 +1,18 @@
 body{
 font-family: 'Voces', sans-serif;
 color: #fdf6f6;
-background:linear-gradient(109.6deg, rgb(0, 0, 0) 11.2%, rgb(11, 132, 145) 91.1%);
+background: radial-gradient(circle at 10% 20%, rgba(91, 173, 254, 0.46) 0%, rgba(91, 224, 254, 0.46) 47.2%, rgba(170, 254, 235, 0.43) 90%);
 
 }
 .Dictionary h2{
 font-size: 18px;
 font-weight: bold;
 margin-bottom: 10px;
-color: #388186;
+color: #0881a3;
 }
 
 h3{
-    color: #388186;
+    color: #0881a3;
 }
 
 .Dictionary {
@@ -20,10 +20,10 @@ h3{
 }
 
 .Dictionary section{
-    background-color: #fdf6f6;
+    background-color: #fffdfb;
     padding:30px;
     border-radius: 5px;
-    box-shadow: rgba(255, 255, 255, 0.5) 0px 1px 4px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
     margin: 20px 0;    
 
 }
@@ -31,7 +31,7 @@ h3{
 .Dictionary input{
     width: 100%;
     padding: 5px 3px;
-    border: 1px solid #388186;
+    border: 1px solid #0881a3;
     border-radius: 5px;
 
 }
