--- a/src/Photos.css
+++ b/src/Photos.css
@@ -1,4 +1,11 @@
 .Photos img{
     border-radius: 3px;
     margin-bottom: 25px;
+    transition: all 0.5s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+}
+
+.Photos img:hover{
+    transform: scale(1.4)
 }
